add create/edit/delete orders

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -28,6 +28,7 @@
     "react/display-name": "off",
     "default-param-last": "off",
     "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
     "react/jsx-filename-extension": [
       1,
       {
